--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
     "bootstrap": "^5.0.0-beta3",
+    "chart.js": "^3.2.1",
+    "chartkick": "^4.0.4",
+    "highcharts": "^9.1.0",
+    "jquery": "^3.6.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
